@@ -4,6 +4,8 @@ package vn.viettel.khdn.crm_DN_VNR20K_2K.service;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -141,7 +143,7 @@ public class EnterpriseService {
         }
         Page<Enterprise> page = enterpriseRepository.searchEnterprises(
                 keyword != null && !keyword.isBlank() ? keyword.trim() : null, enumStatus,
-                enumIndustry, regionFilter, ownerIdFilter, pageable);
+                enumIndustry, regionFilter, null, ownerIdFilter, pageable);
         return page.map(this::toDTO);
     }
 
@@ -318,12 +320,31 @@ public class EnterpriseService {
         // Tạm thời lấy tất cả (không phân trang) để export report
         Page<Enterprise> page = enterpriseRepository.searchEnterprises(
                 keyword != null && !keyword.isBlank() ? keyword.trim() : null, enumStatus,
-                enumIndustry, regionFilter, ownerIdFilter, Pageable.unpaged()); // Hoặc có thể cần
+                enumIndustry, regionFilter, null, ownerIdFilter, Pageable.unpaged()); // Hoặc có thể cần
                                                                                 // viết 1 hàm
         // findAll() riêng
         // trong repository nếu không dùng Pageable
 
-        List<ResEnterpriseDTO> dtos = page.getContent().stream().map(this::toDTO).toList();
+        List<ResEnterpriseDTO> dtos = page.getContent().stream().map(this::toDTO).collect(Collectors.toList());
+        
+        // Load danh sách người đại diện chính
+        List<Long> enterpriseIds = dtos.stream().map(ResEnterpriseDTO::getId).collect(Collectors.toList());
+        if (!enterpriseIds.isEmpty()) {
+            List<EnterpriseContact> primaryContacts = enterpriseContactRepository.findByEnterpriseIdInAndIsPrimaryTrue(enterpriseIds);
+            Map<Long, EnterpriseContact> contactMap = primaryContacts.stream()
+                .collect(Collectors.toMap(c -> c.getEnterprise().getId(), c -> c, (c1, c2) -> c1)); // Tránh duplicate key nếu có lỗi data
+
+            for (ResEnterpriseDTO dto : dtos) {
+                EnterpriseContact contact = contactMap.get(dto.getId());
+                if (contact != null) {
+                    dto.setContactFullName(contact.getFullName());
+                    dto.setContactEmail(contact.getEmail());
+                    dto.setContactPhone(contact.getPhone());
+                    dto.setContactPosition(contact.getPosition());
+                }
+            }
+        }
+
         return ExcelExportHelper.enterprisesToExcel(dtos);
     }
 
